add magnific-popup and bugfix around spritesmith and jsTask

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,9 +15,22 @@
       <header role="banner" class="l-header"></header>
       <h1>Hello World!</h1>
       <div id="main" class="l-main">
-        <p class="red-star"></p>
-        <p class="blue-star"></p>
-        <p class="yellow-star"></p>
+        <section>
+          <h2>example of sprite images</h2>
+          <p class="red-star"></p>
+          <p class="blue-star"></p>
+          <p class="yellow-star"></p>
+          <h2>magnific popup</h2>
+          <p>here is demo.</p>
+          <div class="modal"><a href="#modal" class="modal__btn">demo </a>
+            <div id="modal" class="mfp-hide">
+              <section class="modal__content">
+                <h2>demo</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris elementum turpis risus, quis commodo eros tincidunt at. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sapien nisi, placerat ut egestas vel, vestibulum nec eros. Sed nec venenatis lorem. Donec nulla lacus, molestie vehicula aliquet in, vulputate quis leo. Nullam ut libero vitae magna sollicitudin ornare. Suspendisse non elit congue, aliquam dui at, iaculis mi. Nullam mi dui, dictum a consequat sit amet, ornare ac nibh. Curabitur dui nisl, placerat vitae lobortis vitae, bibendum dapibus eros.</p><a href="#" class="modal__btn--dismiss">dismiss</a>
+              </section>
+            </div>
+          </div>
+        </section>
       </div>
       <footer class="l-footer">
         <p>&copy; 2014 myproject</p>
